<resources>
    <string name="prazno"> </string>
    <string name="app_name">TriMath</string>
    <string name="Kvadrat">Kvadrat</string>
    <string name="Pravokutnik">Pravokutnik</string>
    <string name="Krug">Krug</string>
    <string name="Stranica_A">Stranica a</string>
    <string name="Stranica_B">Stranica b</string>
    <string name="Stranica_C">Stranica c</string>
    <string name="Povrsina">Površina</string>
    <string name="Opseg">Opseg</string>
    <string name="Dijagonala">Dijagonala</string>
    <string name="Polumjer_upisane_kruznice">Polumjer upisane kružnice</string>
    <string name="Polumjer_opisane_kruznice">Polumjer opisane kružnice</string>
    <string name="Izracunaj">Izračunaj</string>
    <string name="Unesite_samo_jednu_vrijednost">Unesite samo jednu vrijednost!</string>
    <string name="Unesite_jednu_vrijednost">Unesite jednu vrijednost!</string>
    <string name="Unesite_samo_dvije_vrijednosti">Unesite samo dvije vrijednosti!</string>
    <string name="Unesite_dvije_vrijednosti">Unesite dvije vrijednosti!</string>
    <string name="Unesite_tri_vrijednosti">Unesite tri vrijednosti!</string>
    <string name="Unesite_samo_tri_vrijednosti">Unesite samo tri vrijednosti!</string>
    <string name="Izbrisi">Izbriši</string>
    <string name="nakvadratznak">²</string>
    <string name="stupnjeviznak">°</string>
    <string name="Promjer">Promjer</string>
    <string name="Polumjer">Polumjer</string>
    <string name="Trokut">Trokut</string>
    <string name="Izbornik">Izbornik</string>
    <string name="Kut_alpha">Kut α (alpha)</string>
    <string name="Kut_beta">Kut β (beta)</string>
    <string name="Kut_gamma">Kut γ (gamma)</string>
    <string name="nije_moguce">Nije moguće.</string>
    <string name="stranica_A">(stranica a)</string>
    <string name="stranica_B">(stranica b)</string>
    <string name="stranica_C">(stranica c)</string>
    <string name="povrsina">(površina)</string>
    <string name="opseg">(opseg)</string>
    <string name="dijagonala">(dijagonala)</string>
    <string name="upisana_kruz">(upisana kružnica)</string>
    <string name="opisana_kruz">(opisana kružnica)</string>
    <string name="promjer">(promjer)</string>
    <string name="polumjer">(polumjer)</string>
    <string name="alpha">(alpha)</string>
    <string name="beta">(beta)</string>
    <string name="gama">(gama)</string>
    <string name="posto_znak">%</string>
    <string name="Jednako_kracni">Jednakokračni trokut</string>
    <string name="Pravo_kutni">Pravokutni trokut</string>
    <string name="Razno_stranicni">Raznostranični trkout</string>
    <string name="Jednako_stranicni">Jednakostraničan trokut</string>
    <string name="Visina_A">Visina na Stranicu a</string>
    <string name="Visina_B">Visina na Stranicu b</string>
    <string name="Visina_C">Visina na Stranicu c</string>
    <string name="visina_A">(visina a)</string>
    <string name="visina_B">(visina b)</string>
    <string name="visina_C">(visina c)</string>
    <string name="Kalkulatori">Kalkulatori</string>
    <string name="Jednadzbe">Jednadžbe</string>
    <string name="Postotak">Postotak</string>
    <string name="Proporcionalnost">Proporcionalnost</string>
    <string name="Obrnuta_proporcionalnost">Obrnuta proporcionalnost</string>
    <string name="Linearna_jednadžba">Linearna jednadžba</string>
    <string name="Kvadratna_jednadzba">Kvadratna jednadžba</string>
    <string name="Sustav_jednadzbi">Sustav jednadžbi</string>
    <string name="Geometrijska_tijela">Geometrijska tijela</string>
    <string name="Geometrijski_likovi">Geometrijski likovi</string>
    <string name="nepoznanica_postotak">X %</string>
    <string name="neki_broj">broja Y</string>
    <string name="broj_X">Broj X</string>
    <string name="doslovno_samo_od">od</string>
    <string name="je_jednako">= </string>
    <string name="x_posto_od_broja_y">X% od broja Y</string>
    <string name="broj_x_je_posto_broja_y">Broj X je Z% od broja Y</string>
    <string name="slovo_Z">Z</string>
    <string name="slovo_X">X</string>
    <string name="slovo_x">x</string>
    <string name="slovo_Y">Y</string>
    <string name="slovo_y">y</string>
    <string name="slovo_Z_postotak">Z%</string>
    <string name="element_skupa">∈</string>
    <string name="doslovno_nula">0</string>
    <string name="doslovno_nula_2">0 </string>
    <string name="slovo_A">A</string>
    <string name="slovo_B">B</string>
    <string name="x_plus">x +</string>
    <string name="Kocka">Kocka</string>
    <string name="Brid">Brid</string>
    <string name="brid">(brid)</string>
    <string name="Prostorna_dijagonala">Prostorna dijagonala</string>
    <string name="prostorna_dijagonala">(prostorna)</string>
    <string name="Plosna_dijagonala">Plošna dijagonala</string>
    <string name="plosna_dijagonala">(plošna)</string>
    <string name="Obujam">Obujam</string>
    <string name="obujam">(obujam)</string>
    <string name="Oplosje">Oplošje</string>
    <string name="oplosje">(oplošje)</string>
    <string name="Povrsina_baze">Površina baze</string>
    <string name="povrsina_baze">(površina baze)</string>
    <string name="Povrsina_pobocja">Površina pobočja</string>
    <string name="povrsina_pobocja">(površina pobočja)</string>
    <string name="centimetar">cm</string>
    <string name="natrecu">³</string>
    <string name="Kugla">Kugla</string>
    <string name="visina">(visina)</string>
    <string name="Visina">Visina</string>
    <string name="Valjak">Valjak</string>
    <string name="slovo_i">i</string>
</resources>