<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color1"
    android:orientation="vertical"
    tools:context=".PostotakActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button11"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/info_btn"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/slovo_i"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.013" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/color3"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/Postotak" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color4"
        android:text="@string/Izracunaj"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioButton4" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x_posto_od_broja_y"
        android:checked="true"
        app:layout_constraintBottom_toTopOf="@id/radioButton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextNumber29" />

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/broj_x_je_posto_broja_y"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioButton3" />

    <EditText
        android:id="@+id/editTextNumber28"
        android:layout_width="75dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/nepoznanica_postotak"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:textColor="@drawable/edtextcolor"
        android:textColorHint="@color/color4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toStartOf="@id/textView"
        app:layout_constraintBottom_toTopOf="@id/radioButton3" />

    <EditText
        android:id="@+id/editTextNumber29"
        android:layout_width="75dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/neki_broj"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:textColor="@drawable/edtextcolor"
        android:textColorHint="@color/color4"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/radioButton3"
        app:layout_constraintStart_toEndOf="@id/textView"
        app:layout_constraintEnd_toStartOf="@id/textView2"/>

    <EditText
        android:id="@+id/editTextNumber30"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/slovo_Z"
        android:importantForAutofill="no"
        android:enabled="false"
        android:inputType="text"
        android:scrollbars="horizontal"
        android:textColor="@drawable/edtextcolor"
        android:textColorHint="@color/color4"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/radioButton3"
        app:layout_constraintStart_toEndOf="@id/textView2"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doslovno_samo_od"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toEndOf="@id/editTextNumber28"
        app:layout_constraintEnd_toStartOf="@id/editTextNumber29"
        app:layout_constraintBottom_toTopOf="@id/radioButton3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/je_jednako"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/radioButton3"
        app:layout_constraintStart_toEndOf="@id/editTextNumber29"
        app:layout_constraintEnd_toStartOf="@id/editTextNumber30"/>

</androidx.constraintlayout.widget.ConstraintLayout>