<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color1"
    android:scrollbars="vertical"
    tools:context=".ValjakActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button11"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/info_btn"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/slovo_i"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.013" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        android:backgroundTint="@color/color3"
        app:title="@string/Valjak" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color4"
        android:text="@string/Izracunaj"
        app:layout_constraintTop_toBottomOf="@id/editTextNumber54"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/editTextNumber47"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/Visina"
        android:inputType="number|numberDecimal"
        android:importantForAutofill="no"
        android:textColorHint="@color/color4"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/editTextNumber48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/editTextNumber48"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/Polumjer"
        android:inputType="number|numberDecimal"
        android:importantForAutofill="no"
        android:textColorHint="@color/color4"
        app:layout_constraintTop_toBottomOf="@id/editTextNumber47"
        app:layout_constraintBottom_toTopOf="@id/editTextNumber49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/editTextNumber49"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/Promjer"
        android:inputType="number|numberDecimal"
        android:importantForAutofill="no"
        android:textColorHint="@color/color4"
        app:layout_constraintTop_toBottomOf="@id/editTextNumber48"
        app:layout_constraintBottom_toTopOf="@id/editTextNumber50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/editTextNumber50"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/Opseg"
        android:inputType="number|numberDecimal"
        android:importantForAutofill="no"
        android:textColorHint="@color/color4"
        app:layout_constraintTop_toBottomOf="@id/editTextNumber49"
        app:layout_constraintBottom_toTopOf="@id/editTextNumber51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/editTextNumber51"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/Obujam"
        android:inputType="number|numberDecimal"
        android:importantForAutofill="no"
        android:textColorHint="@color/color4"
        app:layout_constraintTop_toBottomOf="@id/editTextNumber50"
        app:layout_constraintBottom_toTopOf="@id/editTextNumber52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/editTextNumber52"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/Oplosje"
        android:inputType="number|numberDecimal"
        android:importantForAutofill="no"
        android:textColorHint="@color/color4"
        app:layout_constraintTop_toBottomOf="@id/editTextNumber51"
        app:layout_constraintBottom_toTopOf="@id/editTextNumber53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/editTextNumber53"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/Povrsina_baze"
        android:inputType="number|numberDecimal"
        android:importantForAutofill="no"
        android:textColorHint="@color/color4"
        app:layout_constraintTop_toBottomOf="@id/editTextNumber52"
        app:layout_constraintBottom_toTopOf="@id/editTextNumber54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/editTextNumber54"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/Povrsina_pobocja"
        android:inputType="number|numberDecimal"
        android:importantForAutofill="no"
        android:textColorHint="@color/color4"
        app:layout_constraintTop_toBottomOf="@id/editTextNumber53"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>